# label-6184

./: .gitignore  README.md
backend/: database.py  main.py  pyproject.toml  schemas.py
backend/data/: pins.db
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: contacts.ts  events.ts  pins.ts  series.ts  wearingHistory.ts  wishes.ts
frontend/src/components/: WearingHistorySection.tsx
frontend/src/pages/: ContactListPage.tsx  EventListPage.tsx  PinDetailPage.tsx  PinEditPage.tsx  PinListPage.tsx  SeriesListPage.tsx  WishEditPage.tsx  WishListPage.tsx
frontend/src/types/: contact.ts  event.ts  pin.ts  series.ts  wearingHistory.ts  wish.ts
